--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
     "firebase": "^7.2.1",
+    "moment": "^2.24.0",
+    "moment-range": "^4.0.2",
     "react": "^16.11.0",
     "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.11.0",
