--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
     "react": "^16.11.0",
-    "react-autosuggest": "^9.4.3",
     "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap-typeahead": "^3.4.7",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
