--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.7",
     "bootstrap": "^4.3.1",
     "firebase": "^7.2.1",
+    "formik": "^2.0.4",
     "moment": "^2.24.0",
     "moment-range": "^4.0.2",
     "react": "^16.11.0",
@@ -17,7 +18,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "recharts": "^1.8.5",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "yup": "^0.27.0"
   },
   "scripts": {
     "start": "react-scripts start",
