--- a/package.json
+++ b/package.json
@@ -47,10 +47,9 @@
     ]
   },
   "devDependencies": {
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "gh-pages": "^2.1.1",
-    "jest-enzyme": "^7.1.2",
-    "react-test-renderer": "^16.12.0"
+    "@testing-library/dom": "^6.10.1",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "gh-pages": "^2.1.1"
   }
 }
