--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "car-rental-system",
   "version": "1.0.0",
   "private": false,
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
@@ -25,6 +26,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -50,8 +52,13 @@
     "@testing-library/dom": "^6.10.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
+    "@types/express": "^4.17.2",
+    "@types/mysql": "^2.15.8",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "gh-pages": "^2.1.1"
+    "express": "^4.17.1",
+    "gh-pages": "^2.1.1",
+    "mysql2": "^2.0.1",
+    "nodemon": "^2.0.1"
   }
 }
