--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "yup": "^0.27.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"yarn start-server\" \"yarn start-client\"",
+    "start-client": "react-scripts start",
     "start-server": "nodemon server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,6 +55,7 @@
     "@testing-library/react": "^9.3.2",
     "@types/express": "^4.17.2",
     "@types/mysql": "^2.15.8",
+    "concurrently": "^5.0.0",
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
     "express": "^4.17.1",
