--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
   "scripts": {
     "start": "concurrently \"yarn start-server\" \"yarn start-client\"",
     "start-client": "react-scripts start",
-    "start-server": "nodemon server.js",
+    "start-server": "nodemon server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
